# RAGtriever

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_TEST_SUITE.md  IMPROVEMENTS.md  ISSUE_FILE_DELETION_NOT_DETECTED.md  Ideas_Comprehensive_Context_Search.md  LICENSE  PLANNED_TASKS.md  README.md  TEST_FILE_LIFECYCLE.md  TEST_REPORT.md  pyproject.toml  scan_profile.prof  test_file_lifecycle.py
docs/: ARCHITECTURE.md  GEMINI.md  IMPLEMENTATION_PLAN.md  Issues_AIGateway_JSON_Parsing.md  LOGGING_CONFIGURATION.md  MCP_TOOL_SPEC.json  PLANNED_TASKS.md  PRD.md  SCAN_AND_WATCH_QUICKSTART.md  SCAN_AND_WATCH_TESTING.md  SKILL_IMPROVEMENTS_SUMMARY.md  USERGUIDE.md  WATCHER_MANAGEMENT_SCRIPT.md  WHERE_TO_SEE_INDEXING.md  exploration-agentic-search.md  gemini_service_account_setup.md  testing.md  troubleshooting.md  vertex_ai_setup.md
examples/: config.toml  config.toml.example  multi-vault-config.toml.example  queries.json
scripts/: README.md  generate_provider_report.py  manage_watcher.sh  test_parallel_gemini_providers.sh  test_scan_and_watch.sh
skills/Mneme/source/: pyproject.toml
skills/Mneme/source/src/mneme/: __init__.py  cli.py  config.py  paths.py  query_server.py
skills/Mneme/source/src/mneme/chunking/: boundary_chunker.py
skills/Mneme/source/src/mneme/embeddings/: base.py  sentence_transformers.py
skills/Mneme/source/src/mneme/extractors/: image.py  markdown.py  pdf.py  pptx.py
skills/Mneme/source/src/mneme/indexer/: change_detector.py  indexer.py  parallel_types.py  queue.py
skills/Mneme/source/src/mneme/mcp/: server.py  tools.py
skills/Mneme/source/src/mneme/retrieval/: boosts.py  diversity.py  hybrid.py  reranker.py  retriever.py
skills/Mneme/source/src/mneme/store/: base.py  faiss_index.py  libsql_store.py  schema_manager.py
skills/Mneme/source/tests/: README_FEATURE_EVALUATION.md  test_agentic_tools.py  test_batch_collector.py  test_batch_processor.py  test_boosts.py  test_chunk_id_determinism.py  test_contextual_embeddings.py  test_e2e_integration.py  test_extractors_comprehensive.py  test_feature_evaluation.py  test_image_extractor.py  test_link_persistence.py  test_markdown_parsing.py  test_mmr_diversity.py  test_query_prefix.py  test_reranking_integration.py  test_reranking_quality.py  test_resilience.py  test_retrieval_comprehensive.py  test_schema_migration.py  test_tag_boost.py  test_thread_safety.py  test_transaction_boundaries.py
skills/Mneme/source/tests/documents/baseline_clean/: deep_learning.json
skills/Mneme/source/tests/documents/new_ranking/: ai_gateway.json  deep_learning.json  innovation_cambridge.json
tests/: README_FEATURE_EVALUATION.md  test_aigateway_debug.py  test_baseline_query.py  test_batch_collector.py  test_batch_processor.py  test_boosts.py  test_change_detector.py  test_chunk_id_determinism.py  test_chunkers_comprehensive.py  (+22 more)
(+95 files in other folders)
