[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mneme"
version = "3.3.0"
description = "Memory for your Second Brain — local-first vault indexer + hybrid retrieval with MCP interface."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="Mneme"}]
dependencies = [
  "typer>=0.12,<1.0",
  "python-frontmatter>=1.1.0,<2.0",
  "pyyaml>=6.0,<7.0",
  "watchdog>=4.0.0,<6.0",
  "numpy>=1.26,<3.0",
  "sentence-transformers>=3.0.0,<5.0",
  "pillow>=10.0.0,<12.0",
  "pdfplumber>=0.11.0,<1.0",
  "pymupdf>=1.24.0,<2.0",
  "python-pptx>=1.0.2,<2.0",
  "openpyxl>=3.1.5,<4.0",
  "pytesseract>=0.3.10,<1.0",
  "google-genai>=1.0.0,<2.0",
]

[project.optional-dependencies]
faiss = [
  "faiss-cpu>=1.7.4,<2.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
  "mypy>=1.10",
]

[project.scripts]
mneme = "mneme.cli:app"

[tool.pytest.ini_options]
markers = [
    "manual: marks tests as manual (require network access, long-running, etc.)",
]
